# pinboard

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: build-push.yml
pinboard/: __init__.py  api.py  app.py  config.py  db.py  env.py  log.py  pinboard.db  routes.py  shell.py  start.py
pinboard/static/css/: entries.css  notes.css  pinboard.css
pinboard/static/js/: app.js  config.js  entries.js  notes.js  util.js
pinboard/templates/: main.jinja2
