[build-system]
requires = ["hatchling >= 1.26", "hatch-requirements-txt"]
build-backend = "hatchling.build"


[project]
name = "pinboard"
version = "1.0.0"
description = "Super simple web-dashboard for url collections and notes"
requires-python = ">=3.13"
dynamic = ["dependencies"]


[[project.authors]]
name = "bitdruid"
email = "bitdruid@outlook.com"

[project.scripts]
pinboard = "pinboard.start:main"


[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.metadata.hooks.requirements_txt]
file = "requirements.txt"


[tool.hatch.build.targets.wheel]
packages = ["pinboard"]
artifacts = ["pinboard/static/**", "pinboard/templates/**"]


[tool.djlint]
profile = "jinja"
# H020: tbody elements are filled by app.js; H023: entity icons; H030/H031: internal tool, no SEO meta
ignore = "H020,H023,H030,H031"
max_line_length = 120
max_attribute_length = 120
format_js = true
format_css = true
indent = 20
use_gitignore = true
line_break_after_multiline_tag = true
max_blank_lines = 5


[tool.ruff]
line-length = 120
